--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-jshint": "~0.10.0"
+    "grunt-contrib-jshint": "~0.10.0",
+    "angular-local-storage": "~0.1.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,7 +16,7 @@
   "author": "DONcompany",
   "license": "ISC",
   "repository": {
-  "type": "git",
-  "url": "git://github.com/hllk/JavascriptEliteProjectPro.git"
-}
+    "type": "git",
+    "url": "git://github.com/hllk/JavascriptEliteProjectPro.git"
+  }
 }
